scripts/slurm-31516355.out
Start
Beginning script plots_v4.py
  File "plots_v4.py", line 181
    else
       ^
SyntaxError: invalid syntax
